--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "keywords": [
     "egg",
     "eggPlugin",
-    "egg-plugin"
+    "egg-plugin",
+    "etcd",
+    "etcd3",
+    "config"
   ],
   "dependencies": {
     "etcd3": "^0.2.13"
