--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/eggjs/egg-redis.git"
+    "url": "git+https://github.com/royIdoodle/egg-etcd.git"
   },
   "author": "wangchong@guazi.com",
   "license": "MIT"
